# Algoritmos-y-Estructura-De-Datos

./: README.md
btree-equipodinamita/: README.md  a.out  btree.h  main.cpp  node.h  tester.h
circular-array-la-bica/: README.md  circulararray.h  main.cpp  queue.h  stack.h
coderun1/: main.cpp  solucion.h
codingroom/: coderoom.cpp
codingroom/chainhash/: chainhash.h  main.cpp
codingroom/floyd_warshall/: main.cpp  solucion.h
codingroom/kruskal/: ds.h  main.cpp  solucion.h
codingroom/set/: main.cpp  person.h  set.h
codingroom/ultima/: app.py  m.cpp
copia/: README.md  circularlist.h  main.cpp  pila.h  solution.h
evaluateexpression-la-diegoneta/: README.md  circularlist.h  main.cpp  solution.h
expo/: grafica.py  main.cpp  main.py
forward_list/: forward.h  forwardlist.cpp  list.h  main.cpp
graphs-queabusocausa/: README.md
graphs-queabusocausa/Graph/: DirectedGraph.h  UndirectedGraph.h  graph.h
graphs-queabusocausa/Graph/Algorithms/: bfs.h  dfs.h
lists-bica/: README.md  circular.h  double.h  forward.h  list.h  main.cpp  node.h
practica/: bst.cpp  prueba.py
proyecto-teletubbies_coin/: README.md  main.cpp
proyecto-teletubbies_coin/Blockchain/: Block.h  Blockchain.h  Transaction.h
proyecto-teletubbies_coin/encriptacion/: SHA256.h
proyecto-teletubbies_coin/estructuras/bst/: Tuple.h  (+2 more)
proyecto_AED/: Blockchain.h  CMakeLists.txt  MaxHeap.h  README.md  TData.h  double.h  hash.h  iterator.h  list.h  main.cpp  menu.h  node.h
sparseMatrix/: caballos.cpp  main.cpp
trie-los-solosx100pre/: README.md  main.cpp  patriciatrie.h  simpletrie.h  trie.h
(+8 files in other folders)
